honeypot/grammar/shellgrammar.peg
grammar cmd

cmd        <-  cmdbrace / cmdlist / empty
cmdbrace   <-  " "* "(" " "* cmd " "* ")" " "*               %make_cmdbrace
cmdlist    <-  cmdop / basecmd
cmdop      <-  basecmd ("||" / "&&" / "|" / ";") cmd         %make_cmdop
basecmd    <-  " "* arg (" "+ arg)* " "*                     %make_basecmd             
arg        <-  arg_quot1 / arg_quot2 / arg_noquot
arg_quot1  <-  "'" [^']* "'"                                 %make_arg_quot
arg_quot2  <-  '"' [^"]* '"'                                 %make_arg_quot
arg_noquot <-  [^ ;|&()"']+                                  %make_arg_noquot
empty      <-  ""?
